--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Seja bem vinda a minha central de atividades</h1>
-    <a href="Atividade 5/index.html"></a>
+    <a href="Atividade 5/index.html">Atividade 5</a>
 </body>
 </html>
