--- a/Atividade 9/index.html
+++ b/Atividade 9/index.html
@@ -1,13 +1,11 @@
 <html>
   <head>
     <title>Titulo da Página</title>
-    <link rel="stylesheet" type="text/css" href="CSS/Style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/Style.css" />
   </head>
   <body>
     <h1 class="page-title">Vídeos em alta</h1>
-    <p class="page-description">
-      Veja os vídeos mais acessados da semana
-    </p>
+    <p class="page-description">Veja os vídeos mais acessados da semana</p>
 
     <section class="videos">
       <div class="video">
@@ -15,7 +13,7 @@
 
         <span class="video-time">10:00</span>
 
-        <h1 class="video-title" style="color: white">Lorem ipsum dolor</h1>
+        <h1 class="video-title">Lorem ipsum dolor</h1>
 
         <p class="video-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
@@ -24,11 +22,7 @@
 
         <span class="video-views">100k visualizações</span>
 
-        <time
-          class="video-date"
-          style="color: rgba(255, 255, 255, 0.4); font-size: 12px"
-          >Há 1 mês</time
-        >
+        <time class="video-date">Há 1 mês</time>
       </div>
 
       <div class="video">
@@ -36,7 +30,7 @@
 
         <span class="video-time">10:00</span>
 
-        <h1 class="video-title" style="color: white">Lorem ipsum dolor</h1>
+        <h1 class="video-title">Lorem ipsum dolor</h1>
 
         <p class="video-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
@@ -45,11 +39,7 @@
 
         <span class="video-views">100k visualizações</span>
 
-        <time
-          class="video-date"
-          style="color: rgba(255, 255, 255, 0.4); font-size: 12px"
-          >Há 1 mês</time
-        >
+        <time class="video-date">Há 1 mês</time>
       </div>
 
       <div class="video">
@@ -57,7 +47,7 @@
 
         <span class="video-time">10:00</span>
 
-        <h1 class="video-title" style="color: white">Lorem ipsum dolor</h1>
+        <h1 class="video-title">Lorem ipsum dolor</h1>
 
         <p class="video-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
@@ -66,11 +56,7 @@
 
         <span class="video-views">100k visualizações</span>
 
-        <time
-          class="video-date"
-          style="color: rgba(255, 255, 255, 0.4); font-size: 12px"
-          >Há 1 mês</time
-        >
+        <time class="video-date">Há 1 mês</time>
       </div>
 
       <div class="video">
@@ -78,7 +64,7 @@
 
         <span class="video-time">10:00</span>
 
-        <h1 class="video-title" style="color: white">Lorem ipsum dolor</h1>
+        <h1 class="video-title">Lorem ipsum dolor</h1>
 
         <p class="video-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
@@ -87,11 +73,7 @@
 
         <span class="video-views">100k visualizações</span>
 
-        <time
-          class="video-date"
-          style="color: rgba(255, 255, 255, 0.4); font-size: 12px"
-          >Há 1 mês</time
-        >
+        <time class="video-date">Há 1 mês</time>
       </div>
 
       <div class="video">
@@ -99,7 +81,7 @@
 
         <span class="video-time">10:00</span>
 
-        <h1 class="video-title" style="color: white">Lorem ipsum dolor</h1>
+        <h1 class="video-title">Lorem ipsum dolor</h1>
 
         <p class="video-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
@@ -108,11 +90,7 @@
 
         <span class="video-views">100k visualizações</span>
 
-        <time
-          class="video-date"
-          style="color: rgba(255, 255, 255, 0.4); font-size: 12px"
-          >Há 1 mês</time
-        >
+        <time class="video-date">Há 1 mês</time>
       </div>
 
       <div class="video">
@@ -120,7 +98,7 @@
 
         <span class="video-time">10:00</span>
 
-        <h1 class="video-title" style="color: white">Lorem ipsum dolor</h1>
+        <h1 class="video-title">Lorem ipsum dolor</h1>
 
         <p class="video-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
@@ -129,11 +107,7 @@
 
         <span class="video-views">100k visualizações</span>
 
-        <time
-          class="video-date"
-          style="color: rgba(255, 255, 255, 0.4); font-size: 12px"
-          >Há 1 mês</time
-        >
+        <time class="video-date">Há 1 mês</time>
       </div>
     </section>
   </body>
