--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Central de Atividades</title>
-</head>
-<body>
-    <h1>Seja bem vinda a minha central de atividades</h1>
-    <a href="Atividade 5/index.html">Atividade 5</a>
-</body>
+  </head>
+  <body>
+    <section style="">
+      <h1>Seja bem vindo(a) a minha central de atividades :D</h1>
+      <a href="Atividade 2/index.html" target="_blank">Atividade 2</a>
+      <br />
+      <a href="Atividade 3/index.html " target="_blank">Atividade 3</a>
+      <br />
+      <a href="Atividade 4/index.html" target="_blank">Atividade 4</a>
+      <br />
+      <a href="Atividade 5/index.html" target="_blank">Atividade 5</a>
+      <br />
+      <a href="Atividade 6/index.html" target="_blank">Atividade 6</a>
+      <br />
+      <a href="Atividade 7/index.html" target="_blank">Atividade 7</a>
+      <br />
+      <a href="Atividade 8/index.html" target="_blank">Atividade 8</a>
+      <br />
+      <a href="Atividade 9/index.html" target="_blank">Atividade 9</a>
+      <br />
+      <a href="Atividade 10/index.html" target="_blank">Atividade 10</a>
+      <br />
+      <a href="Atividade 11/index.html" target="_blank">Atividade 11</a>
+      <br />
+      <a href="Atividade 12/index.html" target="_blank">Atividade 12</a>
+      <br />
+    </section>
+
+    <div style="position: fixed; right: 50px; bottom: 50">
+      <a href="www.google.com">Botão</a>
+    </div>
+  </body>
 </html>
