--- a/Atividade 8/index.html
+++ b/Atividade 8/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="CSS/Style.css">
+    <link rel="stylesheet" type="text/css" href="css/Style.css">
     <title>Review</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
         sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
 
-    <a href="http://">Assista ao trailer</a>
+    <a href="#">Assista ao trailer</a>
 
 </body>
 </html>
