--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Central de Atividades</title>
   </head>
   <body>
-    <section style="">
+    <section>
       <h1>Seja bem vindo(a) a minha central de atividades :D</h1>
       <a href="Atividade 2/index.html" target="_blank">Atividade 2</a>
       <br />
