--- a/Atividade 9/index.html
+++ b/Atividade 9/index.html
@@ -1,96 +1,96 @@
 <html>
   <head>
     <title>Titulo da Página</title>
-    <link rel="stylesheet" type="text/css" href="CSS/Style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
     <h1 class="page-title">Vídeos em alta</h1>
-    <p class="page-description">Veja os vídeos mais acessados da semana</p>
+    <p class="page-descricao">Veja os vídeos mais acessados da semana</p>
 
     <section class="videos">
       <div class="video">
         <img class="thumbnail" src="https://picsum.photos/800/500?random=1" />
 
-        <span class="video-time">10:00</span>
+        <span class="video-tempo">10:00</span>
 
-        <h1 class="video-title">Lorem ipsum dolor</h1>
+        <h1 class="video-titulo">Lorem ipsum dolor</h1>
 
-        <p class="video-description">
+        <p class="video-descricao">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
           explicabo!
         </p>
 
         <span class="video-views">100k visualizações</span>
 
-        <time class="video-date">Há 1 mês</time>
+        <time class="video-data">Há 1 mês</time>
       </div>
 
       <div class="video">
         <img class="thumbnail" src="https://picsum.photos/800/500?random=2" />
 
-        <span class="video-time">10:00</span>
+        <span class="video-tempo">10:00</span>
 
-        <h1 class="video-title">Lorem ipsum dolor</h1>
+        <h1 class="video-titulo">Lorem ipsum dolor</h1>
 
-        <p class="video-description">
+        <p class="video-descricao">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
           explicabo!
         </p>
 
         <span class="video-views">100k visualizações</span>
 
-        <time class="video-date">Há 1 mês</time>
+        <time class="video-data">Há 1 mês</time>
       </div>
 
       <div class="video">
         <img class="thumbnail" src="https://picsum.photos/800/500?random=3" />
 
-        <span class="video-time">10:00</span>
+        <span class="video-tempo">10:00</span>
 
-        <h1 class="video-title">Lorem ipsum dolor</h1>
+        <h1 class="video-titulo">Lorem ipsum dolor</h1>
 
-        <p class="video-description">
+        <p class="video-descricao">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
           explicabo!
         </p>
 
         <span class="video-views">100k visualizações</span>
 
-        <time class="video-date">Há 1 mês</time>
+        <time class="video-data">Há 1 mês</time>
       </div>
 
       <div class="video">
         <img class="thumbnail" src="https://picsum.photos/800/500?random=4" />
 
-        <span class="video-time">10:00</span>
+        <span class="video-tempo">10:00</span>
 
-        <h1 class="video-title">Lorem ipsum dolor</h1>
+        <h1 class="video-titulo">Lorem ipsum dolor</h1>
 
-        <p class="video-description">
+        <p class="video-descricao">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
           explicabo!
         </p>
 
         <span class="video-views">100k visualizações</span>
 
-        <time class="video-date">Há 1 mês</time>
+        <time class="video-data">Há 1 mês</time>
       </div>
 
       <div class="video">
         <img class="thumbnail" src="https://picsum.photos/800/500?random=5" />
 
-        <span class="video-time">10:00</span>
+        <span class="video-tempo">10:00</span>
 
-        <h1 class="video-title">Lorem ipsum dolor</h1>
+        <h1 class="video-titulo">Lorem ipsum dolor</h1>
 
-        <p class="video-description">
+        <p class="video-descricao">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
           explicabo!
         </p>
 
         <span class="video-views">100k visualizações</span>
 
-        <time class="video-date">Há 1 mês</time>
+        <time class="video-data">Há 1 mês</time>
       </div>
 
       <div class="video">
@@ -98,7 +98,7 @@
 
         <span class="video-time">10:00</span>
 
-        <h1 class="video-title">Lorem ipsum dolor</h1>
+        <h1 class="video-titulo">Lorem ipsum dolor</h1>
 
         <p class="video-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
@@ -107,7 +107,7 @@
 
         <span class="video-views">100k visualizações</span>
 
-        <time class="video-date">Há 1 mês</time>
+        <time class="video-data">Há 1 mês</time>
       </div>
     </section>
   </body>
