adicionando novas atividades

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       <br />
       <a href="Atividade 12/index.html" target="_blank">Atividade 12</a>
       <br />
+      <a href="https://pzamorini.github.io/aula-16/" target="_blank">Atividade 16  - Grupo</a>
+      <br />
+      <a href="https://lelucis.github.io/aula19-anima-o/" target="_blank">Atividade 19 - Grupo</a>
+      <br />
+
     </section>
 
     <div style="position: fixed; right: 50px; bottom: 50">
